v1.7.0 - updated java to v17